Added more tests

--- a/API-TEST/src/test/test-data/config.properties
+++ b/API-TEST/src/test/test-data/config.properties
@@ -1,5 +1,13 @@
 base_url_authentication_controller=https://www.videogamedb.uk/api/authenticate
-
-
 authentication_controller_password=admin
 authentication_controller_username=admin
+
+base_url_game_controller=https://www.videogamedb.uk/api/videogame
+game_controller_payload={"category": "Platform", "name": "Mario", "rating": "Mature", "releaseDate": "2012-05-04", "reviewScore": 85}
+path_attribute_id=8
+
+base_url_game_controllerV2=https://www.videogamedb.uk/api/v2/videogame
+game_controller_V2={"category": "Platform", "name": "Mario", "rating": "Mature", "releaseDate": "2012-05-04", "reviewScore": 85}
+controller_V2_path_attribute_id=8
+
+
