Fixes and complete API work

--- a/API-TEST/src/test/test-data/config.properties
+++ b/API-TEST/src/test/test-data/config.properties
@@ -7,7 +7,7 @@ game_controller_payload={"category": "Platform", "name": "Mario", "rating": "Mat
 path_attribute_id=8
 
 base_url_game_controllerV2=https://www.videogamedb.uk/api/v2/videogame
-game_controller_V2={"category": "Platform", "name": "Mario", "rating": "Mature", "releaseDate": "2012-05-04", "reviewScore": 85}
-controller_V2_path_attribute_id=8
+game_controller_V2=<?xml version="1.0" encoding="UTF-8"?><videogame><category>Platform</category><name>Mario</name><rating>Mature</rating><releaseDate>2012-05-04</releaseDate><reviewScore>85</reviewScore></videogame>
+controller_V2_path_attribute_id=6
 
 
